istio-route/istio-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - dev.argocd.com
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: argocd-secret    
    - hosts:
        - dev.argocd.com
      port:
        name: http
        number: 80
        protocol: HTTP
      tls:
        httpsRedirect: true
