istio-route/istio-destinationrule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: argocd-server-dtrl
  namespace: istio-system
spec:
  host: dev.argocd.com
  trafficPolicy:
    tls:
      mode: DISABLE
